--- a/package.json
+++ b/package.json
@@ -63,6 +63,9 @@
     "extract-text-webpack-plugin": "^3.0.2",
     "html-loader": "^0.5.1",
     "html-webpack-plugin": "^2.30.1",
+    "koa": "^2.7.0",
+    "koa-bodyparser": "^4.2.1",
+    "koa-router": "^7.4.0",
     "node-sass": "^4.7.2",
     "px2rem-loader": "^0.1.7",
     "sass-loader": "^6.0.6",
