--- a/package.json
+++ b/package.json
@@ -57,6 +57,8 @@
   ],
   "homepage": "https://gitlab.com/imooc/vuejs#README",
   "dependencies": {
+    "async-validator": "^1.10.1",
+    "axios": "^0.18.0",
     "clean-webpack-plugin": "^0.1.17",
     "css-hot-loader": "^1.3.4",
     "css-loader": "^0.28.7",
