--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "node_modules",
     "webpack.config.js"
   ],
-  "homepage": "https://gitlab.com/imooc/vuejs#README",
+  "homepage": "wzzz90",
   "dependencies": {
     "async-validator": "^1.10.1",
     "axios": "^0.18.0",
@@ -70,7 +70,7 @@
     "koa-bodyparser": "^4.2.1",
     "koa-jwt": "^3.5.1",
     "koa-router": "^7.4.0",
-    "lodash": "^4.17.11",
+    "mint-ui": "^2.2.13",
     "node-sass": "^4.7.2",
     "px2rem-loader": "^0.1.7",
     "sass-loader": "^6.0.6",
