--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "JDFinance",
+  "name": "jdfinance-timer",
   "version": "1.0.0",
   "description": "京东金融",
   "main": "index.js",
@@ -81,6 +81,7 @@
     "vue-router": "^3.0.1",
     "vue-style-loader": "^3.0.3",
     "vue-template-compiler": "^2.5.9",
+    "vuex": "^3.1.0",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.9.5",
     "write-file-webpack-plugin": "^4.2.0"
