--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "koa-router": "^7.4.0",
     "mint-ui": "^2.2.13",
     "node-sass": "^4.7.2",
+    "puppeteer": "^1.13.0",
     "px2rem-loader": "^0.1.7",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.0",
